--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_localization: ^0.2.0
+  flutter_native_splash: ^2.4.0
   get: ^4.6.6
 
 dev_dependencies:
