--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   animate_do: ^3.3.4
   cupertino_icons: ^1.0.6
+  device_preview: ^1.1.0
   flutter:
     sdk: flutter
   flutter_localization: ^0.2.0
