fix issues and add scroll snap list package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_localization: ^0.2.0
   flutter_native_splash: ^2.4.0
   flutter_screenutil: ^5.9.0
+  scroll_snap_list: ^0.9.1
   video_player: ^2.8.6
 
 dev_dependencies:
@@ -66,7 +67,6 @@ flutter:
     - assets/images/
     - lang/ar.json
     - lang/en.json
-<<<<<<< HEAD
     - assets/images/others/
     - assets/images/AlHekal/
     - assets/images/AlHekal/eastHenya/
@@ -90,9 +90,6 @@ flutter:
     - assets/images/outside_der/
     - assets/images/salat Almaaeda/
     - assets/images/south hekal/
-=======
-    - assets/tst.mp4
->>>>>>> d3ba4778722ecd60d27666b0c5cfe95e7f920ebf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -123,11 +120,9 @@ flutter:
           weight: 400
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
-
 # using 'flutter Assets Gen' extetion
 flutter_assets:
   assets_path: assets/images/
   output_path: lib/core/styles/image/
   filename: app_images.dart
-  field_prefix:
+  field_prefix: null
