--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   animate_do: ^3.3.4
   cupertino_icons: ^1.0.6
   device_preview: ^1.1.0
+  audioplayers: ^6.0.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
