add app audio for whole app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -124,7 +124,7 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 # using 'flutter Assets Gen' extetion
 flutter_assets:
-  assets_path: assets/images/
-  output_path: lib/core/styles/image/
-  filename: app_images.dart
+  assets_path: assets/audios/
+  output_path: lib/core/styles/audio/
+  filename: app_audio.dart
   field_prefix: null
