--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,9 +1,9 @@
 flutter_native_splash:
   # for android 11 and ios
-  background_image: "assets/images/turath.png"
-  # color: "#ad661f"
+  image: "assets/images/turath.png"
+  color: "#ffffff"
 
   android_12: 
-    background_image: "assets/images/turath.png"
+    image: "assets/images/turath.png"
     # image: "assets/images/turath1.png"
-    # color: "#ad661f"
+    color: "#ffffff"
