add 'Rakkas' font  and use it in whole app , and create some text style

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -122,6 +122,9 @@ flutter:
           weight: 500
         - asset: assets/fonts/english/poppins/Poppins-Regular.ttf
           weight: 400
+    - family: Rakkas
+      fonts:
+        - asset: assets/fonts/Rakkas-Regular.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 # using 'flutter Assets Gen' extetion
