--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
   flutter_lints: ^3.0.0
+  lint: ^2.3.0
   flutter_test:
     sdk: flutter
 
