video view UI and Logic done

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,12 @@
     <queries>
       <intent>
         <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="email address" />
+      </intent>
+      <intent>
+        <action android:name="android.intent.action.VIEW" />
         <data android:scheme="https" />
       </intent>
-      
     </queries>
     
     <application
