delete pading in custom player play

--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -4,6 +4,6 @@ flutter_native_splash:
   color: "#ffffff"
 
   android_12: 
-    image: "assets/images/splashh.png"
+    image: "assets/images/splashhaa.png"
     # image: "assets/images/turath1.png"
     color: "#ffffff"
